[package]
name = "lightning-rapid-gossip-sync"
version = "0.0.124"
authors = ["Arik Sosman <git@arik.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/rust-lightning"
edition = "2021"
description = """
Utility to process gossip routing data from Rapid Gossip Sync Server.
"""

[features]
default = ["std"]
std = ["bitcoin-io/std", "bitcoin_hashes/std"]

[dependencies]
lightning = { version = "0.0.124", path = "../lightning", default-features = false }
bitcoin = { version = "0.32.2", default-features = false }
bitcoin_hashes = { version = "0.14.0", default-features = false }
bitcoin-io = { version = "0.1.2", default-features = false }

[target.'cfg(ldk_bench)'.dependencies]
criterion = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
lightning = { version = "0.0.124", path = "../lightning", features = ["_test_utils"] }

[lints]
workspace = true
