[package]
name = "lightning-types"
version = "0.3.0-rc1"
authors = ["Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/rust-lightning/"
readme = "../README.md"
description = """
Basic types which are used in the lightning network
"""
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
_test_utils = []

[dependencies]
bitcoin = { version = "0.32.2", default-features = false }

[lints]
workspace = true
