[package]
name = "possiblyrandom"
version = "0.2.0"
authors = ["Matt Corallo"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/rust-lightning/"
description = """
A crate that wraps getrandom and always compiles, returning 0s when no randomness is available.
"""
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
getrandom = { version = "0.2", optional = true, default-features = false }

# Enable getrandom if we are on a platform that (likely) supports it
[target.'cfg(not(any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.2", default-features = false }
